--- a/src/explore-ui/src/index.css
+++ b/src/explore-ui/src/index.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +14,13 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+input,
+select {
+  padding: 4px 8px;
+  background: #fff;
+  border: solid 1px #949494;
+  border-radius: 4px;
+  color: #000;
 }
